--- a/src/pages/[locale]/docs/dev/ui/atoms/ejemploProgressBar.astro
+++ b/src/pages/[locale]/docs/dev/ui/atoms/ejemploProgressBar.astro
@@ -10,7 +10,7 @@ export async function getStaticPaths() {
 
 <Layout >
 
-  <div class="mt-4 w-64">
+  <div class="mt-4 w-64 space-y-2" >
     <ProgressBar value={70} color="green" />
     <ProgressBar value={40} color="red" />
     <ProgressBar value={90} color="indigo" />
