--- a/src/pages/[locale]/docs/dev/ui/atoms/ejemploButton.astro
+++ b/src/pages/[locale]/docs/dev/ui/atoms/ejemploButton.astro
@@ -3,7 +3,8 @@
 import Layout from "@/layouts/Layout.astro";
 import { getStaticLanguagePaths } from "@/i18n/utils";
 import { Button } from "@/components/atoms/Button";
-import { Pencil, Trash} from "phosphor-react";
+import ButtonEjm from "@/components/atoms/ButtonEjm";
+import { Pencil, Trash } from "phosphor-react";
 
 export async function getStaticPaths() {
   return getStaticLanguagePaths();
@@ -42,32 +43,15 @@ export async function getStaticPaths() {
   >
     <Pencil slot="icon" />
   </Button>
-  <Button
-    variant="primary"
-    size="large"
-    positionIcon="left"
-    disabled={false}
-    fullWidth={false}
-  >
-    <Pencil slot="icon" />
-  </Button>
-  <Button
-    variant="primary"
-    size="large"
-    positionIcon="left"
-    disabled={false}
-    fullWidth={false}
-  >
-    <Pencil slot="icon" />
-  </Button>
-  <Button
-    variant="primary"
-    size="large"
-    positionIcon="left"
-    disabled={false}
-    fullWidth={false}
-  >
-    <Pencil slot="icon" />
-  </Button>
-  
+
+<ButtonEjm
+  type="button"
+  onClick={() => alert("Hola mundo")}
+  variant="primary"
+  size="medium"
+  client:load
+>
+  Hola mundo
+</ButtonEjm>
+
 </Layout>
