--- a/src/pages/[locale]/docs/dev/ui/molecules/viewMolecules.astro
+++ b/src/pages/[locale]/docs/dev/ui/molecules/viewMolecules.astro
@@ -3,6 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import { getStaticLanguagePaths } from "@/i18n/utils";
 import { CartProduct } from "@/components/molecules/CartProduct";
 import { Heading } from "@/components/atoms/Heading";
+import { CartProductRecommended } from "@/components/molecules/CartProductRecommended";
 
 export async function getStaticPaths() {
   return getStaticLanguagePaths();
@@ -26,28 +27,27 @@ const productExample = {
     <Heading level={1} color="primary">Lista de moléculas</Heading>
   </div>
 
-  <div class="px-4 space-y-12">
-
+  <div class="px-4 space-y-12 py-8">
     <!-- En una grid -->
     <div>
       <Heading level={3}>Cart Product</Heading>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+      <div class="flex flex-wrap gap-4 md:gap-6">
         <CartProduct
           client:load
-          size="small"
-          className="w-full"
+          size="medium"
+          className="max-w-sm w-full"
           product={productExample}
         />
         <CartProduct
           client:load
-          size="small"
-          className="w-full"
+          size="medium"
+          className="max-w-sm w-full"
           product={productExample}
         />
         <CartProduct
           client:load
-          size="small"
-          className="w-full"
+          size="medium"
+          className="max-w-sm w-full"
           product={productExample}
         />
       </div>
@@ -82,6 +82,31 @@ const productExample = {
           product={productExample}
         />
       </div>
+    </div>
+
+    <Heading level={2}>Cart Product Recommended</Heading>
+    <div class=" flex flex-wrap gap-2 md:gap-6">
+        
+      <CartProductRecommended
+        client:load
+        className="inline-block max-w-[200px]"
+        product={productExample}
+      />
+      <CartProductRecommended
+        client:load
+        className="inline-block max-w-[200px]"
+        product={productExample}
+      />
+      <CartProductRecommended
+        client:load
+        className="inline-block max-w-[200px]"
+        product={productExample}
+      />
+      <CartProductRecommended
+        client:load
+        className="inline-block max-w-[200px]"
+        product={productExample}
+      />
     </div>
   </div>
 </Layout>
