Corrigiendo archivo ejemploForm

--- a/src/pages/[locale]/docs/dev/ui/molecules/ejemploForm.astro
+++ b/src/pages/[locale]/docs/dev/ui/molecules/ejemploForm.astro
@@ -90,6 +90,6 @@ const fields = [
 ---
 
 <Layout title="Forms: todos los campos posibles">
-  <h1 class="font-bold text-2xl mb-4">Forms: todos los campos posibles</h1>
+  <h1 class="font-bold text-2xl mb-4">Forms</h1>
   <Form client:load fields={fields} />
 </Layout>
