--- a/src/pages/[locale]/docs/dev/ui/templates/Home.astro
+++ b/src/pages/[locale]/docs/dev/ui/templates/Home.astro
@@ -1,12 +1,15 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import { getStaticLanguagePaths } from "@/i18n/utils";
+import { TemplateHome } from "@/components/templates/TemplateHome";
 import { TemplateLogin } from "@/components/templates/TemplateLogin";
 
-
+export async function getStaticPaths() {
+  return getStaticLanguagePaths();
+}
 
 ---
 <Layout title="Ejemplo TemplateLogin">
-  
+    <TemplateHome />
 </Layout>
 <!-- https://i.pinimg.com/736x/14/47/c3/1447c3dde903d7ac5681ca2e774a3411.jpg -->
