--- a/src/layouts/AppShell.astro
+++ b/src/layouts/AppShell.astro
@@ -27,11 +27,11 @@ const { hideHeader = false, hideNavbar = false, hideFooter = false, className = 
 
 <div class={`min-h-screen flex flex-col bg-gray-50 ${className}`}>
   {!hideHeader && <Header client:load />}
-  <!-- {!hideNavbar && <Navbar client:load />} -->
+  {!hideNavbar && <Navbar client:load />}
 <!-- w-full mx-auto px-4 py-6 -->
   <main class="flex-1 ">
     <slot />
   </main>
 
-  <!-- {!hideFooter && <Footer client:load />} -->
+  {!hideFooter && <Footer client:load />}
 </div>
