--- a/src/pages/[locale]/docs/dev/ui/molecules/ejemplo-SocialLoginButton.astro
+++ b/src/pages/[locale]/docs/dev/ui/molecules/ejemplo-SocialLoginButton.astro
@@ -34,7 +34,7 @@ export async function getStaticPaths() {
     <SocialLoginButton 
       client:load
       provider="github"
-      text="Entrar con GitHub"
+      text=" con GitHub"
       onClick={() => console.log("Login con GitHub")}
     />
   </div>
