--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { AuthProvider } from "@/contexts/AuthProvider";
 import "@/styles/global.css";
 
 interface Props {
@@ -14,7 +15,7 @@ const {
   lang = "es",
   description = "Plataforma Chiru",
   bodyClass = "antialiased bg-white text-gray-900",
-  noIndex = false
+  noIndex = false,
 } = Astro.props as Props;
 ---
 
@@ -23,7 +24,7 @@ const {
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/chiru_logo.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <meta name="description" content={description} />
@@ -35,6 +36,8 @@ const {
     <slot name="head" />
   </head>
   <body class={bodyClass}>
-    <slot />
+    <AuthProvider>
+      <slot />
+    </AuthProvider>
   </body>
 </html>
