--- a/src/pages/[locale]/docs/dev/ui/templates/auth/register.astro
+++ b/src/pages/[locale]/docs/dev/ui/templates/auth/register.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import { TemplateRegister } from "@/components/templates/TemplateRegister";
 import { getStaticLanguagePaths } from "@/i18n/utils";
+import { UnifiedAuthIsland } from "@/components/islands/UnifiedAuthIsland";
+
 
 export async function getStaticPaths() {
   return getStaticLanguagePaths();
@@ -9,10 +10,8 @@ export async function getStaticPaths() {
 ---
 
 <Layout title="Registro">
-  <TemplateRegister
-    client:load
-    imageUrl="https://imag.comage.jpg"
-  />
+    <UnifiedAuthIsland client:visible mode="register" imageAlt="Registro" />
+
 </Layout>
 
 <!-- https://i.pinimg.com/736x/14/47/c3/1447c3dde903d7ac5681ca2e774a3411.jpg -->
