--- a/src/pages/[locale]/docs/dev/ui/templates/auth/login.astro
+++ b/src/pages/[locale]/docs/dev/ui/templates/auth/login.astro
@@ -8,7 +8,7 @@ export async function getStaticPaths() {
   return getStaticLanguagePaths();
 }
 
-const imageUrl = "https://i.pinimg.com/736x/14/47/c3/1447c3dde903d7ac5681ca2e774a3411.jpg";
+const imageUrl = "https://w.wallhaven.cc/full/z8/wallhaven-z88yeg.png";
 ---
 
 <Layout title="Ejemplo TemplateLogin">
